--- a/softdevfinals/templates/recipes/recipe_form.html
+++ b/softdevfinals/templates/recipes/recipe_form.html
@@ -60,7 +60,7 @@
 
             <div class="form-group">
                 <label for="{{ form.image.id_for_label }}">Image:</label>
-                <input type="file" name="image" id="{{ form.image.id_for_label }}" class="form-control-file">
+                <input type="file" name="image" id="{{ form.image.id_for_label }}" class="form-control-file" required>
                 {% for error in form.image.errors %}
                     <div class="alert alert-danger">{{ error }}</div>
                 {% endfor %}
