--- a/softdevfinals/templates/accounts/change_password.html
+++ b/softdevfinals/templates/accounts/change_password.html
@@ -1,16 +1,52 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <title>Change Password</title>
 </head>
 <body>
-    {% include 'nav.html' %}
+    <nav class="navbar navbar-expand-lg">
+        <div class="text-center mb-4"></div>
+        <a href="{% url 'home' %}" class="d-flex align-items-center text-decoration-none">
+            <img src="/static/css/logo.png" alt="Logo" class="logo" />
+            <span class="nav-link ml-2">Share Mo Lang</span>
+        </a>
+        
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="background-color: white; border: none;">
+            <span class="navbar-toggler-icon" style="background-color: black; width: 25px; height: 3px; display: block; margin: 5px auto;"></span>
+            <span class="navbar-toggler-icon" style="background-color: black; width: 25px; height: 3px; display: block; margin: 5px auto;"></span>
+            <span class="navbar-toggler-icon" style="background-color: black; width: 25px; height: 3px; display: block; margin: 5px auto;"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'favorites' %}">Favorites</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'recipe-create' %}">Create New Recipe</a>
+                </li>
+    
+                {% if user.is_superuser %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'user-list' %}">User List</a>
+                </li>
+                {% endif %}
+    
+                <li class="nav-item">
+                    <a class="nav-link text-danger" href="{% url 'logout' %}">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="container mt-5">
-        <a href="{% url 'profile' %}" class="btn btn-danger">Go back</a>
-
+    
         <h2>Change Password</h2>
         <form method="POST" class="mt-4">
             {% csrf_token %}
@@ -26,9 +62,8 @@
                 <label for="new_password1" class="form-label">New Password</label>
                 <input type="password" class="form-control" id="new_password1" name="new_password1" required>
                 {% for error in form.new_password1.errors %}
-                <div class="text-danger">{{ error }}</div>
-            {% endfor %}
-            
+                    <div class="text-danger">{{ error }}</div>
+                {% endfor %}
             </div>
             
             <div class="mb-3">
@@ -38,8 +73,15 @@
                     <div class="text-danger">{{ error }}</div>
                 {% endfor %}
             </div>
-            <button type="submit" class="btn btn-primary mt-4">Change Password</button>
+            <div class="d-flex justify-content-start">
+                <button type="submit" class="btn btn-primary mr-2">Change Password</button>
+                <a href="{% url 'profile' %}" class="btn btn-danger">Go back</a>
+            </div>
+            
+            
+            
         </form>
+        
 
     </div>
 
