--- a/softdevfinals/templates/admin/user_list.html
+++ b/softdevfinals/templates/admin/user_list.html
@@ -54,7 +54,7 @@
             </table>
         </div>
 
-        <a href="{% url 'home' %}" class="btn btn-secondary">Back to Home</a>
+        <a href="{% url 'home' %}" class="btn btn-secondary mt-2">Back to Home</a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
