--- a/softdevfinals/templates/home/home.html
+++ b/softdevfinals/templates/home/home.html
@@ -50,8 +50,10 @@
             <span class="nav-link ml-2">Share Mo Lang</span>
         </a>
         
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="background-color: white; border: none;">
+            <span class="navbar-toggler-icon" style="background-color: black; width: 25px; height: 3px; display: block; margin: 5px auto;"></span>
+            <span class="navbar-toggler-icon" style="background-color: black; width: 25px; height: 3px; display: block; margin: 5px auto;"></span>
+            <span class="navbar-toggler-icon" style="background-color: black; width: 25px; height: 3px; display: block; margin: 5px auto;"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
