--- a/softdevfinals/templates/nav_admin.html
+++ b/softdevfinals/templates/nav_admin.html
@@ -13,8 +13,10 @@
         <div class="text-center mb-4"></div>
         <img src="{% static 'css/logo.png' %}" alt="Logo" class="logo" />
         <a class="nav-link" href="{% url 'home' %}">Share Mo Lang</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="background-color: white; border: none;">
+            <span class="navbar-toggler-icon" style="background-color: black; width: 25px; height: 3px; display: block; margin: 5px auto;"></span>
+            <span class="navbar-toggler-icon" style="background-color: black; width: 25px; height: 3px; display: block; margin: 5px auto;"></span>
+            <span class="navbar-toggler-icon" style="background-color: black; width: 25px; height: 3px; display: block; margin: 5px auto;"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
