--- a/softdevfinals/templates/recipes/recipe_detail.html
+++ b/softdevfinals/templates/recipes/recipe_detail.html
@@ -20,8 +20,10 @@
             <span class="nav-link ml-2">Share Mo Lang</span>
         </a>
         
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="background-color: white; border: none;">
+            <span class="navbar-toggler-icon" style="background-color: black; width: 25px; height: 3px; display: block; margin: 5px auto;"></span>
+            <span class="navbar-toggler-icon" style="background-color: black; width: 25px; height: 3px; display: block; margin: 5px auto;"></span>
+            <span class="navbar-toggler-icon" style="background-color: black; width: 25px; height: 3px; display: block; margin: 5px auto;"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
@@ -66,21 +68,48 @@
             </div>
 
             {% if object.user == user %}
-                <div class="btn-group" role="group" aria-label="Recipe actions">
-                    <a class="btn btn-secondary btn-sm mr-2" href="{% url 'recipe-update' object.id %}">Update</a>
-                    <form action="{% url 'recipe-delete' object.id %}" method="POST" style="display:inline;">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                    </form>
-                </div>
-                
-            {% elif request.user.is_superuser %}
-                <form action="{% url 'recipe-delete' object.id %}" method="POST" style="display:inline;">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                </form>
-            {% endif %}
+            <div class="btn-group" role="group" aria-label="Recipe actions">
+                <a class="btn btn-secondary btn-sm mr-2" href="{% url 'recipe-update' object.id %}">Update</a>
+                <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#confirmDeleteModal{{ object.id }}">
+                    Delete
+                </button>
+            </div>
+            
+        {% elif request.user.is_superuser %}
+            <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#confirmDeleteModal{{ object.id }}">
+                Delete
+            </button>
+        {% endif %}
+
+
+
         </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="confirmDeleteModal{{ object.id }}" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content" style="background-color: #343131; color: #f6e7d8;">
+                    <div class="modal-header" style="border-bottom: 1px solid #444;">
+                        <h5 class="modal-title" id="confirmDeleteLabel">Confirm Delete</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Are you sure you want to delete your recipe "{{ object.name }}"?</p>
+                    </div>
+                    <div class="modal-footer" style="border-top: 1px solid #444;">
+                        <form action="{% url 'recipe-delete' object.id %}" method="POST" style="display:inline;">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-danger">Delete</button>
+                        </form>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+
 
         <div class="row d-flex align-items-center">
             <div class="col-md-6">
